MDEV-36351 MariaDB crashes when trying to access information_schema.users under --skip-grant-tables